<resources>
    <string name="app_name">网上订餐</string>
    <string name="login_text">登录</string>
    <string name="login_btn_text">开始美食之旅</string>
    <string name="login_username_hint">请输入用户名或手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="signup_username_hint">请输入用户名</string>
    <string name="signup_phoneNumber_hint" translatable="false">请输入您的手机号（中国）</string>
    <string name="signup_text" translatable="false">注册</string>
    <string name="login_signup" translatable="false">没有账号？</string>
    <string name="buttomAdd">加入购物车</string>
    <string name="buttonSub">从购物车去除</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pay_title" translatable="false">请输入支付密码</string>
    <string name="defaultValue">默认</string>
    <string name="dish_1" translatable="false">巨无霸</string>
    <string name="dish_2" translatable="false">原味珍珠奶茶</string>
    <string name="dish_3" translatable="false">芝香培根蛋可颂</string>
    <string name="dish_4" translatable="false">可口可乐</string>
    <string name="dish_5" translatable="false">双层吉士汉堡</string>
    <string name="dish_6" translatable="false">麦麦汉堡桶</string>
    <string name="dish_7" translatable="false">双层原味板烧鸡腿麦满分</string>
    <string name="dish_8" translatable="false">零度可口可乐</string>
    <string name="dish_9" translatable="false">青花椒风味半鸡</string>
    <string name="dish_10" translatable="false">人气堡堡桶</string>
    <string name="dish_11" translatable="false">四拼小食桶</string>
    <string name="dish_12" translatable="false">双层安格斯MAX厚牛培根堡</string>
    <string name="dish_13" translatable="false">苹板支撑</string>
    <string name="dish_14" translatable="false">猪柳麦满分</string>
    <string name="dish_15" translatable="false">玉米杯</string>
    <string name="dish_16" translatable="false">苹果片</string>
    <string name="dish_17" translatable="false">朱古力新地</string>
    <string name="dish_18" translatable="false">烧鸡果乐</string>
    <string name="dish_19" translatable="false">皮蛋鸡肉粥</string>
    <string name="dish_20" translatable="false">麦辣鸡翅</string>
    <string name="dish_21" translatable="false">优品豆浆</string>
    <string name="dish_22" translatable="false">芝香培根可颂</string>
    <string name="dish_23" translatable="false">锡兰红茶</string>
    <string name="dish_24" translatable="false">汉堡包</string>
    <string name="dish_25" translatable="false">那么大鸡排</string>
    <string name="dish_26" translatable="false">炸鸡天团桶</string>
    <string name="dish_27" translatable="false">吉士汉堡包</string>
    <string name="dish_28" translatable="false">美汁源100%苹果汁</string>
    <string name="dish_29" translatable="false">原味板烧鸡腿麦满分</string>
    <string name="dish_30" translatable="false">德式图林根香肠炒双蛋堡</string>
    <string name="dish_31" translatable="false">安格斯MAX厚牛培根堡</string>
    <string name="dish_32" translatable="false">麦麦炸鸡桶</string>
    <string name="dish_33" translatable="false">汉堡包</string>
    <string name="dish_34" translatable="false">儿童鱼排堡</string>
    <string name="dish_35" translatable="false">双层深海鳕鱼堡</string>
    <string name="dish_36" translatable="false">麦香鸡</string>
    <string name="dish_37" translatable="false">悠享早晨全餐</string>
    <string name="dish_38" translatable="false">草莓新地</string>
    <string name="dish_39" translatable="false">吉士蛋麦满分</string>
    <string name="dish_40" translatable="false">玉米杯 (小)</string>
    <string name="dish_41" translatable="false">麦乐鸡 (5块)</string>
    <string name="dish_42" translatable="false">麦乐鸡（4块）</string>
    <string name="dish_43" translatable="false">不素之霸双层牛堡</string>
    <string name="dish_44" translatable="false">优品豆浆</string>
    <string name="dish_45" translatable="false">美汁源阳光橙</string>
    <string name="dish_46" translatable="false">鲜美烟肉早晨全餐</string>
    <string name="dish_47" translatable="false">0度泡泡啤</string>
    <string name="dish_48" translatable="false">麦香鱼</string>
    <string name="dish_49" translatable="false">吉士炒双蛋堡</string>
    <string name="dish_50" translatable="false">安格斯MAX厚牛芝士堡</string>
    <string name="dish_51" translatable="false">柠檬红茶味饮料</string>
    <string name="dish_52" translatable="false">麦麦脆汁鸡（上腿排）</string>
    <string name="dish_53" translatable="false">有吉乐</string>
    <string name="dish_54" translatable="false">雪菜脆笋鸡肉粥</string>
    <string name="dish_55" translatable="false">大脆鸡扒麦满分</string>
    <string name="dish_56" translatable="false">麦旋风奥利奥原味</string>
    <string name="dish_57" translatable="false">培根蔬萃双层牛堡</string>
    <string name="dish_58" translatable="false">麦麦脆汁鸡（鸡胸）</string>
    <string name="dish_59" translatable="false">椰子水</string>
    <string name="dish_60" translatable="false">苹果片</string>
    <string name="dish_61" translatable="false">板烧鸡腿香肠早晨全餐</string>
    <string name="dish_62" translatable="false">麦辣鸡腿汉堡</string>
    <string name="dish_63" translatable="false">火腿扒麦满分</string>
    <string name="dish_64" translatable="false">鲜煮咖啡</string>
    <string name="dish_65" translatable="false">圆筒冰淇淋</string>
    <string name="dish_66" translatable="false">纯牛奶 (UHT)</string>
    <string name="dish_67" translatable="false">三拼小食盒</string>
    <string name="dish_68" translatable="false">纯牛奶（UHT)</string>
    <string name="dish_69" translatable="false">薯角</string>
    <string name="dish_70" translatable="false">火腿扒蛋可颂</string>
    <string name="dish_71" translatable="false">烟肉蛋麦满分</string>
    <string name="dish_72" translatable="false">无鸡不欢</string>
    <string name="dish_73" translatable="false">薯条（迷你）</string>
    <string name="dish_74" translatable="false">双层安格斯MAX厚牛芝士堡</string>
    <string name="dish_75" translatable="false">麦旋风™奥利奥草莓口味</string>
    <string name="dish_76" translatable="false">麦麦脆汁鸡（琵琶腿）</string>
    <string name="dish_77" translatable="false">原味板烧鸡腿堡</string>
    <string name="dish_78" translatable="false">脆香油条</string>
    <string name="dish_79" translatable="false">美汁源100%苹果汁 (小)</string>
    <string name="dish_80" translatable="false">猪柳蛋麦满分</string>
    <string name="dish_81" translatable="false">德式图灵根香肠</string>
    <string name="dish_82" translatable="false">菠萝派</string>
    <string name="dish_83" translatable="false">冰露包装饮用水</string>
    <string name="dish_84" translatable="false">雪碧</string>
    <string name="dish_85" translatable="false">能量蛋</string>
    <string name="dish_86" translatable="false">热朱古力</string>
    <string name="dish_87" translatable="false">图林根香肠早安营养卷</string>
    <string name="dish_88" translatable="false">香芋派</string>
    <string name="dish_89" translatable="false">真牛啊套餐</string>
    <string name="dish_90" translatable="false">冰露包装饮用水</string>
    <string name="dish_91" translatable="false">法式经典可颂</string>
    <string name="dish_92" translatable="false">薯条</string>
    <string name="dish_93" translatable="false">猪柳炒双蛋堡</string>
    <string name="dish_94" translatable="false">脆薯饼</string>
    <string name="dish_95" translatable="false">火腿扒早安营养卷</string>
    <string name="desc_1" translatable="false">传承50年的经典之选！两块100%纯牛肉饼，搭配撒有鲜芝麻的松软面包、清新爽口的生菜、洋葱和酸黄瓜，辅以香滑顺口的芝士与美味酱汁，层层食材，口感丰富，打造极致美味体验。</string>
    <string name="desc_2" translatable="false">丝滑奶茶搭配软糯珍珠，冷热由人。</string>
    <string name="desc_3" translatable="false">口感膨松柔软的可颂配上香嫩培根、嫩滑鸡蛋和浓郁芝士，一整天元气满满。</string>
    <string name="desc_4" translatable="false">搭配正餐小食，好带劲！</string>
    <string name="desc_5" translatable="false">100%纯牛肉与双层香软芝士融为一体，搭配松软面包与美味酱料，两倍滋味诱惑，无人能挡！</string>
    <string name="desc_6" translatable="false">麦麦汉堡桶</string>
    <string name="desc_7" translatable="false">鸡腿肉，我要双层的！双层去骨鸡腿肉，嫩滑多汁，煎制过程0油添加，辅以鲜脆生菜丝及香浓烧鸡醬，口感丰富，更好味。</string>
    <string name="desc_8" translatable="false">无糖畅爽，尽释美妙！</string>
    <string name="desc_9" translatable="false">鸡皮金黄焦脆，鸡肉软嫩多汁。风味多元，饱满立体，配合独家锁鲜技术，每一口都清新鲜香，意犹未尽。</string>
    <string name="desc_10" translatable="false">人气堡堡桶</string>
    <string name="desc_11" translatable="false">四拼小食桶</string>
    <string name="desc_12" translatable="false">精选两块100%安格斯牛肉饼，搭配培根、黄车打芝士片和新鲜罗马生菜，独特热熔工艺让芝士慢慢融化，丝丝渗透进牛肉纤维中——半融化的芝士和肉饼的油脂相互交融，让口感更加丰富，浓香四溢！</string>
    <string name="desc_13" translatable="false">1个香芋派+1袋苹果片+1杯美汁源阳光橙（小杯）</string>
    <string name="desc_14" translatable="false">鲜嫩多汁的猪柳，烘烤风味的松饼，搭配微咸吉士，层层相叠，口感微脆，内部柔软，滋味无穷！</string>
    <string name="desc_15" translatable="false">粒粒饱满，颗颗多汁。香！甜！爽！</string>
    <string name="desc_16" translatable="false">优选山东红富士，新鲜入口，清爽酸甜，为小朋友搭配营养均衡的一餐。</string>
    <string name="desc_17" translatable="false">醇香细腻的冰淇淋搭配香醇丝滑的朱古力酱，一口沉醉在醇厚的绵滑浓香之中。</string>
    <string name="desc_18" translatable="false">1个原味板烧鸡腿堡+1袋苹果片+1杯零度可乐（中杯）</string>
    <string name="desc_19" translatable="false">精选东北大米，星级水米比例12：1，悉心熬煮95分钟，直到粒粒开花。浓稠软糯好粥底，精选松花蛋和健康鸡肉精制而成，口感丰富，暖心暖胃。</string>
    <string name="desc_20" translatable="false">精选优质白羽鸡翅，火辣惹味，刺激滋味瞬间爆棚。</string>
    <string name="desc_21" translatable="false">传统中式饮品，仅限早餐时段供应。</string>
    <string name="desc_22" translatable="false">精心烤制的可颂，搭配烟熏风味的培根和高品质芝士片，香酥可口，咸香四溢。</string>
    <string name="desc_23" translatable="false">香浓热红茶，给你全天醒神暖意﹗</string>
    <string name="desc_24" translatable="false">100%纯牛肉！以少许盐和胡椒调味，搭配爽脆酸黄瓜和洋葱粒，添加美味番茄酱，打造出经典好滋味。</string>
    <string name="desc_25" translatable="false">辣椒的劲辣，大蒜和洋葱的辛辣，黑胡椒的热辣，融合成独特风味。</string>
    <string name="desc_26" translatable="false">炸鸡天团桶</string>
    <string name="desc_27" translatable="false">100%纯牛肉与香软芝士融为一体，搭配爽脆酸黄瓜和洋葱颗粒，辅以美味酱料，丰富口感，一咬即刻涌现！</string>
    <string name="desc_28" translatable="false">100%苹果汁，纸盒包装。</string>
    <string name="desc_29" translatable="false">原块去骨鸡扒，嫩滑多汁，煎制过程0油添加，辅以鲜脆生菜丝及香浓烧鸡醬，口感丰富，更好味。</string>
    <string name="desc_30" translatable="false">两颗优质鸡蛋，原汁原味，搭配德式图林根香肠，口感层次更丰富。</string>
    <string name="desc_31" translatable="false">精选100%安格斯牛肉饼，搭配培根、黄车打芝士片和新鲜罗马生菜，独特热熔工艺让芝士慢慢融化，丝丝渗透进牛肉纤维中——半融化的芝士和肉饼的油脂相互交融，让口感更加丰富，浓香四溢！</string>
    <string name="desc_32" translatable="false">麦麦炸鸡桶</string>
    <string name="desc_33" translatable="false">100%纯牛肉！以少许盐和胡椒调味，搭配爽脆酸黄瓜和洋葱粒，添加美味番茄酱，打造出经典好滋味。</string>
    <string name="desc_34" translatable="false">深海鳕鱼烹制而成的鳕鱼饼，搭配新鲜番茄，风味独特，均衡又美味。</string>
    <string name="desc_35" translatable="false">特选两整块深海鳕鱼饼，肉质洁白细腻，富含优质蛋白质，咬一口唇齿留香，满足加倍。美味与营养，两个我都要！（实际以餐厅供应为主）</string>
    <string name="desc_36" translatable="false">清脆爽口的生菜，给你植物纤维；金黄酥脆的鸡肉则来自精心培育的优质嫩鸡。营养配搭，让你多一个好滋味的健康选择。</string>
    <string name="desc_37" translatable="false">精致全餐精选块块鲜嫩多汁的猪柳，略带咸味，多汁。炒蛋金黄松软，口感润滑；松饼烘烤均匀，表面微脆；薯饼金黄酥脆，内部松软。搭配麦咖啡精选优质鲜煮咖啡，拿下今天从早餐开始！</string>
    <string name="desc_38" translatable="false">醇香细腻的冰淇淋搭配鲜嫩可口的草莓酱，邂逅甜蜜回忆。</string>
    <string name="desc_39" translatable="false">圆形蒸蛋口感润滑，烘烤风味松饼口感微脆，搭配微咸吉士层层相叠，开启满分一天！</string>
    <string name="desc_40" translatable="false">粒粒饱满，颗颗多汁。香！甜！爽！</string>
    <string name="desc_41" translatable="false">严格挑选优质鸡肉，精密控制火候，锁住肉汁和香味。外皮金黄酥脆，鸡肉嫩滑多汁，配以秘制蘸酱，入口难忘。</string>
    <string name="desc_42" translatable="false">严格挑选优质鸡肉，精密控制火候，锁住肉汁和香味。外皮金黄酥脆，鸡肉嫩滑多汁，配以秘制蘸酱，入口难忘。</string>
    <string name="desc_43" translatable="false">特选两块100%纯牛肉饼，仅以少许盐和胡椒调味，搭配德式图林根香肠，肉感十足，吃得过瘾！</string>
    <string name="desc_44" translatable="false">传统中式饮品，仅限早餐时段供应。</string>
    <string name="desc_45" translatable="false">维他命+纤维，营养就要新鲜的。</string>
    <string name="desc_46" translatable="false">精致全餐精选火腿肉，炒蛋金黄松软，口感润滑；松饼烘烤均匀，表面微脆；薯饼金黄酥脆，内部松软。搭配麦咖啡精选优质鲜煮咖啡，拿下今天从早餐开始！</string>
    <string name="desc_47" translatable="false">气泡冲力十足，淡淡啤酒香，透心清爽。</string>
    <string name="desc_48" translatable="false">深海鳕鱼烹制而成的鳕鱼饼，外皮金黄酥脆，内里鲜嫩多汁。美味鱼肉搭配滋味沙拉酱，风味独特。</string>
    <string name="desc_49" translatable="false">两颗优质鸡蛋，原汁原味，炒出松软口感，搭配芝士营养更均衡！</string>
    <string name="desc_50" translatable="false">精选100%安格斯牛肉饼，搭配秘制芝士风味酱和新鲜番茄片，独特热熔工艺让芝士慢慢融化，丝丝渗透进牛肉纤维中——半融化的芝士和肉饼的油脂相互交融，让口感更加丰富，浓香四溢！</string>
    <string name="shopping_car_title">购物车</string>
    <string name="clear_shopping_car">清空</string>
    <string name="sweetDegree">甜度</string>
    <string name="sweet_1">0分甜</string>
    <string name="sweet_2">3分甜</string>
    <string name="sweet_3">7分甜</string>
    <string name="sweet_4">10分甜</string>
    <string name="chooseCoupon">选择优惠券</string>
</resources>