<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView_bg"
        android:layout_width="504dp"
        android:layout_height="861dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        app:srcCompat="@drawable/bg_dialog"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView_signUp"
        android:layout_width="200dp"
        android:layout_height="77dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:text="@string/signup_text"
        android:textAlignment="center"
        android:textColor="#fc8c60"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_bg"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="@+id/imageView_bg"
        app:layout_constraintTop_toTopOf="@+id/imageView_bg"
        app:layout_constraintVertical_bias="0.13" />

    <com.example.Android_bigWork.Utils.ClearEditText
        android:id="@+id/textView_username"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/signup_username_hint"
        android:inputType="textPersonName"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"

        tools:ignore="SpeakableTextPresentCheck" />


    <com.example.Android_bigWork.Utils.ClearEditText
        android:id="@+id/textView_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/signup_phoneNumber_hint"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_username"
        app:layout_constraintVertical_bias="0.272"
        app:regexType="mobile"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.example.Android_bigWork.Utils.PasswordEditText
        android:id="@+id/textView_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_username"
        app:layout_constraintVertical_bias="0.083"

        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nanshi" />

        <com.example.Android_bigWork.Utils.SwitchButton
            android:id="@+id/SwitchButton_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nvshi" />
    </LinearLayout>

    <com.example.Android_bigWork.Utils.SubmitButton
        android:id="@+id/btn_signup"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:background="@drawable/fillet_edit_text"
        android:backgroundTint="#febb53"
        android:text="@string/signup_text"
        android:textColor="#1B5E20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password"
        app:layout_constraintVertical_bias="0.54" />

</androidx.constraintlayout.widget.ConstraintLayout>

